# RFSN_NPC_CONTROLLER

./: .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DETAILED.md  INSTRUCTIONS.md  README.md  config.json  debug_tts_cleaner.py  docker-compose.yml  llm_subprompt_template.txt  verify_runtime_fixes.py
Dashboard/: index.html  learning_test.html
Python/: action_scorer.py  bandit_learner.py  chatterbox_tts.py  debug_tokenizer.py  emotional_tone.py  evaluate_logs.py  event_recorder.py  hot_config.py  intent_extraction.py  kokoro_tts.py  launch_optimized.py  llm_action_prompts.py  memory_consolidator.py  memory_governance.py  memory_manager.py  mlx_tts.py  model_manager.py  multi_npc.py  observability.py  ollama_client.py  orchestrator.py  piper_tts.py  prometheus_metrics.py  pyproject.toml  requirements-core.txt  requirements-mac-mlx.txt  requirements.txt  reward_shaping.py  runtime_state.py  security.py  security_boundaries.py  semantic_memory.py  state_machine.py  streaming_engine.py  streaming_pipeline.py  streaming_voice_system.py  structured_logging.py  version.py  voice_router.py  world_model.py  (+1 more)
Unity/: README.md
cgw_ssl_guard_step1_clean/: README.md  pyproject.toml
cgw_ssl_guard_step1_clean/cgw_ssl_guard/: __init__.py  cgw_state.py  event_bus.py  forced_override.py  monitors.py  runtime.py  thalamic_gate.py  types.py
cgw_ssl_guard_step1_clean/cgw_ssl_guard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cgw_ssl_guard_step1_clean/tests/: test_integration_corrected.py  test_preflight.py
demos/: multi_npc_demo.py  (+5 more)
(+241 files in other folders)
